@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2003/02/17 13:53:08 zuntum Exp $
+$NetBSD: distinfo,v 1.2 2004/01/05 22:11:15 hubertf Exp $
 
-SHA1 (spamprobe-0.8b.tar.gz) = 10d728dcd2ec0d454b14a98a5d2adb9da396b27e
-Size (spamprobe-0.8b.tar.gz) = 119700 bytes
+SHA1 (spamprobe-0.9e.tar.gz) = 1b16747ae8edc520c30d3921229342097afadf04
+Size (spamprobe-0.9e.tar.gz) = 147172 bytes
